--- a/Smartspend/app/src/main/res/values/strings.xml
+++ b/Smartspend/app/src/main/res/values/strings.xml
@@ -95,5 +95,34 @@
     <string name="history_label">History</string>
     <string name="hint_amount">R600</string>
 
+    <string name="new_income">New Income</string>
+    <string name="amount">Amount</string>
+    <string name="record_reference">Record Reference</string>
+    <string name="confirm">Confirm</string>
+
+    <string name="new_expense">New Expense</string>
+    <string name="expense_name">Expense Name</string>
+
+    <string name="new_goal">New Goal</string>
+    <string name="total_amount">Total Amount</string>
+    <string name="saved_amount">Saved Amount</string>
+    <string name="save">Save</string>
+
+    <string name="category_name">Category Name</string>
+    <string name="set_amount">Set Amount</string>
+    <string name="amount_hint">R600</string>
+    <string name="selected_color">Selected Color:</string>
+    <string name="pick_color">Pick Colour</string>
+    <string name="create_category">Create Category</string>
+
+    <string name="add">Add</string>
+
+    <string name="create_reminder">Create Reminder</string>
+    <string name="description_hint">Description</string>
+    <string name="date_due_hint">Date Due</string>
+    <string name="enabled_text">(Enabled)</string>
+    <string name="disabled_text">(Disabled)</string>
+    <string name="date_to_notify_hint">Date to notify</string>
+    <string name="create_button">Create</string>
 
 </resources>
